<resources>
    <string name="app_name">Yote Companion</string>
    <string name="action_settings">Settings</string>
    <string name="action_back_to_navigation"></string>
    <string name="title_activity_add_notes">New Note</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="title_activity_view_note">View Note</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign up!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Reset Password Via Email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login_email">Sign In With Email</string>
    <string name="btn_login_google">Sign In With Google</string>
    <string name="btn_link_to_register">Register!</string>
    <string name="btn_link_to_login">Back to login page</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back to login page</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Reset password</string>
    <string name="forgot_password_msg">Please enter email address.</string>
    <string name="title_activity_signup">Signup Activity</string>
    <string name="action_log_out">Logout</string>
    <string name="title_activity_logout">Logout</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="title_activity_settings_new">Settings</string>

    <string name="invitation_message">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>

    <!--Notifications-->
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>

    <!--General-->
    <string name="gen_password">Only works if logged in w/ Email address</string>
    <string name="key_change_password">key_change_password</string>

    <!--About-->
    <string name="pref_header_about">About</string>
    <string name="summary_about">Yote Companion is a seamless app that will help with all your note taking and habit tracking desires </string>
    <string name="app_version">Alpha v1.69</string>
    <string name="summary_support">How could we improve?</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.usd.edu/arts-and-sciences/computer-science</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://google.com</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.google.com</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>


</resources>
